--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,1 +1,19 @@
-<h1>This is the events index</h1>
+  <div class="container pt-6">
+    <h1 class="title has-text-centered has-text-info">Incoming Events</h1>
+    <% @events.each do |event| %>
+      <div class="box">
+        <article class="media">
+          <div class="media-content">
+            <div class="content">
+              <strong><%= event.event %></strong><br />
+              <p><%= event.description %></p><br />
+              <p><%= event.date.to_date %></p>
+              <p><%=  event.date.strftime('%I:%M %p') %></p>
+              <small><%= event.user.name %></small>
+            </div>
+          </div>
+        </article>
+      </div>
+    <% end %>
+  </div>
+
