change field name user_id to creator_id

--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -9,7 +9,7 @@
               <p><%= event.description %></p><br />
               <p><%= event.date.to_date %></p>
               <p><%=  event.date.strftime('%I:%M %p') %></p>
-              <small><%= event.user.name %></small>
+              <small><%= event.creator.name %></small>
             </div>
           </div>
         </article>
