--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,1 +1,8 @@
-<%= @event.name %>
+<%= @event.creator.name %>
+      <%= form_with(model: @event_attendance, url: "/confirm_attendance", method: :post) do |form| %>
+         <div class="is-hidden">
+           <%= form.number_field :attendee_id, value: current_user.id%>
+           <%= form.number_field :attended_event_id, value: @event.id%>
+         </div>
+         <%= form.submit 'Attend Event' %>
+      <% end %>
