--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,12 +12,12 @@
 
   <body>
     <% if  flash[:notice] %>
-      <div class="notification is-primary global-notification">
+      <div class="notification is-primary global-notification mb-0">
         <p class="notice"><%= notice %></p>
       </div>
     <% end %>
     <% if  flash[:alert] %>
-      <div class="notification is-danger global-notification">
+      <div class="notification is-danger global-notification mb-0">
         <p class="alert"><%= alert %></p>
       </div>
     <% end %>
