--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,4 +1,21 @@
-<%= simple_form_for(@user) do |f| %>
-  <%= f.input :name %>
-  <%= f.button :submit %>
-<% end %> 
+<div class="section">
+  <div class="container">
+    <div class="columns is-centered">
+      <div class="column is-4">
+        <h1 class="title">SignUp</h1>
+         <%= simple_form_for(@user) do |f| %>
+           <div class="field">
+            <div class="control">
+              <%= f.input :name, required: false, autofocus: true, wrapper: false, input_html: { class: "input" }, label_html: { class: "label"} %>
+            </div>
+           </div>
+           <div class="field">
+           <div class="control">
+             <%= f.button :submit, "SignUp", class:"button is-success is-medium"  %>
+           </div>
+           </div>
+        <% end %> 
+      </div>
+   </div>  
+  </div>
+</div>
