--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -10,7 +10,7 @@
   <p><i class="fa fa-clock-o" aria-hidden="true"></i> <%= @event.date.strftime('%I:%M %p') %></p>
   </h1>
 
-  <% if current_user.id == @event.creator.id %>
+  <% if user_signed_in? && current_user.id == @event.creator.id %>
   <h1 class="title is-6">
     Create By: You
   </h1>
@@ -21,14 +21,18 @@
   <% end %>
 
 
-  <% if current_user.id != @event.creator_id %>
-    <%= form_with(model: @event_attendance, url: "/confirm_attendance", method: :post) do |form| %>
-      <div class="is-hidden">
-        <%= form.number_field :attendee_id, value: current_user.id%>
-        <%= form.number_field :attended_event_id, value: @event.id%>
-      </div>
-      <%= form.submit 'Attend Event', class:"button is-success is-medium" %>
-    <% end %>
+  <% if user_signed_in? && current_user.id != @event.creator_id %>
+    <%# <% if current_user.id == @event_attendance.attendee_id %1> %>
+    <%#   <%= link_to 'Cancel Attendance', method: :destroy, class: 'button is-danger is-medium' %1> %>
+    <%# <% else %1> %>
+      <%= form_with(model: @event_attendance, url: "/confirm_attendance", method: :post) do |form| %>
+        <div class="is-hidden">
+          <%= form.number_field :attendee_id, value: current_user.id%>
+          <%= form.number_field :attended_event_id, value: @event.id%>
+        </div>
+        <%= form.submit 'Attend Event', class:"button is-success is-medium" %>
+      <% end %>
+    <%# <% end %1> %>
   <% else %>
     <%= link_to "Back", :back , class:"button is-success is-medium" %>
   <% end %>
