--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -36,7 +36,13 @@
   <% else %>
     <%= link_to "Back", :back , class:"button is-success is-medium" %>
   <% end %>
-
+      <%= form_with(model: @event_attendance, url: "/cancel_attendance", method: :delete) do |form| %>
+        <div class="is-hidden">
+          <%= form.number_field :attendee_id, value: current_user.id%>
+          <%= form.number_field :attended_event_id, value: @event.id%>
+        </div>
+        <%= form.submit 'Cancel Attendance', class:"button is-danger is-medium" %>
+      <% end %>
 <h1 class= "title is-6 mt-6">Guest List
   <% @event.attendees.each do |attendee|%>
    <div class="column">
