--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -37,8 +37,8 @@
     <%= link_to "Back", :back , class:"button is-success is-medium" %>
   <% end %>
       <%= form_with(model: @event_attendance, url: "/cancel_attendance", method: :delete) do |form| %>
-        <div class="is-hidden">
-          <%= form.number_field :attendee_id, value: current_user.id%>
+        <div class="is">
+          <%= form.number_field :attendee_id, value: current_user.id if current_user%>
           <%= form.number_field :attended_event_id, value: @event.id%>
         </div>
         <%= form.submit 'Cancel Attendance', class:"button is-danger is-medium" %>
