add buttons in the navbar

--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -46,7 +46,7 @@
     </div>
   </div>
   <footer class="card-footer">
-    <i class="fa fa-lock button card-footer-item is-success" aria-hidden="true"></i>
+    <%= link_to 'More Info', event, class:"button card-footer-item is-success" %>
   </footer>
   </div>
 <% end %>
