--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,6 +28,9 @@
         <%= link_to root_path, class: 'navbar-item' do %>
           <h1 class="title is-3 has-text-white">Eventbride</h1>
         <% end %>
+        <%= link_to root_path, class: 'navbar-item' do %>
+          <p class='button is-success'>Home</p>
+        <% end %>
       </div>
         <div class="navbar-end">
           <div class="navbar-item">
