--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -22,9 +22,6 @@
 
 
   <% if user_signed_in? && current_user.id != @event.creator_id %>
-    <%# <% if current_user.id == @event_attendance.attendee_id %1> %>
-    <%#   <%= link_to 'Cancel Attendance', method: :destroy, class: 'button is-danger is-medium' %1> %>
-    <%# <% else %1> %>
       <%= form_with(model: @event_attendance, url: "/confirm_attendance", method: :post) do |form| %>
         <div class="is-hidden">
           <%= form.number_field :attendee_id, value: current_user.id%>
@@ -32,24 +29,23 @@
         </div>
         <%= form.submit 'Attend Event', class:"button is-success is-medium" %>
       <% end %>
-    <%# <% end %1> %>
   <% else %>
     <%= link_to "Back", :back , class:"button is-success is-medium" %>
   <% end %>
-      <%= form_with(model: @event_attendance, url: "/cancel_attendance", method: :delete) do |form| %>
-        <div class="is">
-          <%= form.number_field :attendee_id, value: current_user.id if current_user%>
-          <%= form.number_field :attended_event_id, value: @event.id%>
-        </div>
-        <%= form.submit 'Cancel Attendance', class:"button is-danger is-medium" %>
-      <% end %>
 <h1 class= "title is-6 mt-6">Guest List
   <% @event.attendees.each do |attendee|%>
-   <div class="column">
+   <div class="column is-flex is-justify-content-space-between">
     <h2 class="title is-4">
       <%= attendee.name %>
     </h2>
-    </div>
+    <%= form_with(model: @event_attendance, url: "/cancel_attendance", method: :delete) do |form| %>
+      <div class="is-hidden">
+        <%= form.number_field :attendee_id, value: current_user.id if current_user%>
+        <%= form.number_field :attended_event_id, value: @event.id%>
+      </div>
+      <%= form.submit 'Cancel Attendance', class:"button is-danger is-medium" if current_user == attendee %>
+    <% end %>
+   </div>
   <% end %>
 </h1>
 
