--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -35,26 +35,7 @@
         <div class="navbar-end">
           <div class="navbar-item">
             <div class="buttons">
-            <% if user_signed_in? %>
-              <div class="control mr-5 mb-3">
-                <h2 class="title is-5 has-text-white">
-                  Welcome <%= current_user.name%>!
-                </h2>
-              </div>
-              <p class="control mr-3">
-                <%= link_to 'Dashboard', current_user, class: "button is-success" %>
-              </p>
-              <p class="control">
-                <%= link_to 'Log Out', '/logout', class: "button is-danger" %>
-              </p>
-            <% else %>
-              <p class="control mr-3">
-                <%= link_to 'Sign In', '/login', class: "button is-success" %>
-              </p>
-              <p class="control">
-                <%= link_to 'Sign Up', '/signup', class: "button is-success" %>
-              </p>
-            <% end %>
+              <%= login_and_logout %>
             </div>
           </div>
         </div>
